# sphinxcontrib-typstbuilder

./: .gitignore  .readthedocs.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: checks.yml  release.yml  sphinx.yml
docs/: conf.py  configuration.rst  index.rst  writing-templates.rst
docs/examples/: example.txt  index.rst  md.md  rst.rst
src/sphinxcontrib_typstbuilder/: __init__.py  _builder.py  _writer.py
src/sphinxcontrib_typstbuilder/templates/: charged-ieee.typ  common.typ  default.typ  ilm.typ
tests/sphinx-test-root/: default.nix  includes.patch  skip-citation-refs.patch  skip-extensions.patch  temp-term-list.patch  typst-math.patch
